Cloud endpoint is only available if cloud is enabled
